add order servlet successful
9:55
2016.8.1

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -228,7 +228,7 @@
                                 trCartOrder.id = "useAjaxOrder";
                                 trCartOrder.onclick = function() {
                                     // addToOrder(item.pic, array);
-                                    alert("click");
+                                    // alert("click");
                                     var xhr = new XMLHttpRequest();
                                     var url = "order";
                                     xhr.onreadystatechange = function() {
