it is like this

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -119,7 +119,7 @@
                                 var logout = document.getElementById('logout');
                                 var order = document.getElementById('order');
                                 login.onclick = function() {
-                                    window.open('./jsp/loginJsp.jsp');
+                                    window.open('./loginJsp.jsp');
 
 
 
